* Initial check-in
git-svn-id: trunk@14857 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -4111,6 +4111,16 @@ packages/librsvg/Makefile svneol=native#text/plain
 packages/librsvg/Makefile.fpc svneol=native#text/plain
 packages/librsvg/fpmake.pp svneol=native#text/plain
 packages/librsvg/src/rsvg.pas svneol=native#text/plain
+packages/libsee/Makefile svneol=native#text/plain
+packages/libsee/Makefile.fpc svneol=native#text/plain
+packages/libsee/README.txt svneol=native#text/plain
+packages/libsee/examples/mod_stream.pp svneol=native#text/plain
+packages/libsee/examples/teststream.pp svneol=native#text/plain
+packages/libsee/examples/testwrite.pp svneol=native#text/plain
+packages/libsee/examples/tlibsee.pp svneol=native#text/plain
+packages/libsee/fpmake.pp svneol=native#text/plain
+packages/libsee/src/libsee.pas svneol=native#text/plain
+packages/libsee/src/libseewrap.c svneol=native#text/plain
 packages/libxml/Makefile svneol=native#text/plain
 packages/libxml/Makefile.fpc svneol=native#text/plain
 packages/libxml/examples/Makefile svneol=native#text/plain
