* Initial check-in
git-svn-id: trunk@14859 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -1980,6 +1980,21 @@ packages/fcl-image/src/pngcomn.pp svneol=native#text/plain
 packages/fcl-image/src/pscanvas.pp svneol=native#text/plain
 packages/fcl-image/src/targacmn.pp svneol=native#text/plain
 packages/fcl-image/src/xwdfile.pp svneol=native#text/plain
+packages/fcl-js/Makefile svneol=native#text/plain
+packages/fcl-js/Makefile.fpc svneol=native#text/plain
+packages/fcl-js/README.TXT svneol=native#text/plain
+packages/fcl-js/fpmake.pp svneol=native#text/plain
+packages/fcl-js/src/jsbase.pp svneol=native#text/plain
+packages/fcl-js/src/jsparser.pp svneol=native#text/plain
+packages/fcl-js/src/jsscanner.pp svneol=native#text/plain
+packages/fcl-js/src/jstree.pp svneol=native#text/plain
+packages/fcl-js/tests/tcparser.pp svneol=native#text/plain
+packages/fcl-js/tests/tcscanner.pp svneol=native#text/plain
+packages/fcl-js/tests/testjs.ico -text
+packages/fcl-js/tests/testjs.lpi svneol=native#text/plain
+packages/fcl-js/tests/testjs.lpr svneol=native#text/plain
+packages/fcl-js/tests/testjs.manifest svneol=native#text/plain
+packages/fcl-js/tests/testjs.rc svneol=native#text/plain
 packages/fcl-json/Makefile svneol=native#text/plain
 packages/fcl-json/Makefile.fpc svneol=native#text/plain
 packages/fcl-json/examples/confdemo.lpi svneol=native#text/plain
