--- a/.gitattributes
+++ b/.gitattributes
@@ -4129,6 +4129,8 @@ packages/librsvg/src/rsvg.pas svneol=native#text/plain
 packages/libsee/Makefile svneol=native#text/plain
 packages/libsee/Makefile.fpc svneol=native#text/plain
 packages/libsee/README.txt svneol=native#text/plain
+packages/libsee/examples/Makefile svneol=native#text/plain
+packages/libsee/examples/Makefile.fpc svneol=native#text/plain
 packages/libsee/examples/mod_stream.pp svneol=native#text/plain
 packages/libsee/examples/teststream.pp svneol=native#text/plain
 packages/libsee/examples/testwrite.pp svneol=native#text/plain
