* math.power/intpower(0,0) return 1, this is as recommended in IEEE 754   as well as compatible with other programming languages and delphi
git-svn-id: trunk@14873 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -9398,6 +9398,7 @@ tests/test/units/math/tmask.inc svneol=native#text/plain
 tests/test/units/math/tmask.pp svneol=native#text/plain
 tests/test/units/math/tmask2.pp svneol=native#text/plain
 tests/test/units/math/tnaninf.pp svneol=native#text/plain
+tests/test/units/math/tpower.pp svneol=native#text/pascal
 tests/test/units/math/ttrig1.pp svneol=native#text/plain
 tests/test/units/objects/testobj.pp svneol=native#text/plain
 tests/test/units/objects/testobj1.pp svneol=native#text/plain
