--- Merging r14854 into '.': U    rtl/objpas/sysutils/dati.inc A    tests/test/units/sysutils/strtotimetest.pp
# revisions: 14854
------------------------------------------------------------------------
r14854 | marco | 2010-02-03 16:10:14 +0100 (Wed, 03 Feb 2010) | 2 lines
Changed paths:
   M /trunk/rtl/objpas/sysutils/dati.inc
   A /trunk/tests/test/units/sysutils/strtotimetest.pp

 * New more delphi compat intstrtotime by Bart Broersma #15505  + test

------------------------------------------------------------------------

git-svn-id: branches/fixes_2_4@14890 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -8716,6 +8716,7 @@ tests/test/units/system/tval3.pp svneol=native#text/plain
 tests/test/units/system/tval4.pp svneol=native#text/plain
 tests/test/units/system/tval5.pp svneol=native#text/plain
 tests/test/units/system/tvalc.pp svneol=native#text/plain
+tests/test/units/sysutils/strtotimetest.pp svneol=native#text/plain
 tests/test/units/sysutils/tastrcmp.pp svneol=native#text/plain
 tests/test/units/sysutils/tastrcmp1.pp svneol=native#text/plain
 tests/test/units/sysutils/texec1.pp svneol=native#text/plain
