* insert proper type conversions when optimising logical operations and     compares by avoiding unnecessary sign extensions (fixes bug reported in     http://lists.freepascal.org/lists/fpc-pascal/2010-January/023907.html )   * never throw away int2int type conversions on bitpacked loads, because     in these cases the proper bits still need to be selected
git-svn-id: trunk@14892 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -8306,6 +8306,7 @@ tests/tbs/tb0566.pp svneol=native#text/plain
 tests/tbs/tb0567.pp svneol=native#text/plain
 tests/tbs/tb0568.pp svneol=native#text/plain
 tests/tbs/tb0569.pp svneol=native#text/pascal
+tests/tbs/tb0570.pp svneol=native#text/plain
 tests/tbs/tb205.pp svneol=native#text/plain
 tests/tbs/ub0060.pp svneol=native#text/plain
 tests/tbs/ub0069.pp svneol=native#text/plain
