+ "CExtended" type that is the same as "extended", but conforming to the     properties/behaviour of the equivalent of Extended in C (i.e., to     "long double" on i386 and x86_64 platforms that support a 10 byte     long double, and to "double" elsewhere)
git-svn-id: trunk@14912 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -8487,6 +8487,7 @@ tests/test/cg/taddr1.pp svneol=native#text/plain
 tests/test/cg/taddr2.pp svneol=native#text/plain
 tests/test/cg/taddreal1.pp svneol=native#text/plain
 tests/test/cg/taddreal2.pp svneol=native#text/plain
+tests/test/cg/taddreal3.pp svneol=native#text/plain
 tests/test/cg/taddset.pp svneol=native#text/plain
 tests/test/cg/taddset2.pp svneol=native#text/plain
 tests/test/cg/taddset3.pp svneol=native#text/plain
