Revert wrong part in commit 42580:  reinstate 'override FPC=' for cycle targets
git-svn-id: trunk@42585 -
(cherry picked from commit c74007b580d15a6578c4fe5e7421b2afca8b80da)

--- a/compiler/Makefile
+++ b/compiler/Makefile
@@ -4416,6 +4416,7 @@ endif
 endif
 endif
 else
+cycle: override FPC=
 cycle:
 	$(MAKE) OS_TARGET=$(OS_SOURCE) CPU_TARGET=$(CPU_SOURCE) CROSSBINDIR= BINUTILSPREFIX= CROSSCYCLEBOOTSTRAP=1 rtlclean rtl CYCLELEVEL=1
 	$(MAKE) OS_TARGET=$(OS_SOURCE) CPU_TARGET=$(CPU_SOURCE) EXENAME=$(TEMPNAME) CROSSBINDIR= BINUTILSPREFIX= CROSSCYCLEBOOTSTRAP=1 cycleclean compiler CYCLELEVEL=1
