--- a/utils/fpcm/fpcmake.ini
+++ b/utils/fpcm/fpcmake.ini
@@ -290,7 +290,8 @@ ifeq ($(FULL_TARGET),aarch64-embedded)
 endif
 
 ifdef SUB_TARGET 
-override FPCOPT+=-t$(SUB_TARGET)
+FPCOPT+=-t$(SUB_TARGET)
+FPMAKE_OPT+=--subtarget=$(SUB_TARGET)
 endif
 
 
