fcl-hash: fixed start without params, show config filename

--- a/packages/fcl-hash/examples/authenticator.lpi
+++ b/packages/fcl-hash/examples/authenticator.lpi
@@ -7,7 +7,6 @@
         <MainUnitHasCreateFormStatements Value="False"/>
         <MainUnitHasTitleStatement Value="False"/>
         <MainUnitHasScaledStatement Value="False"/>
-        <UseDefaultCompilerOptions Value="True"/>
       </Flags>
       <SessionStorage Value="InProjectDir"/>
       <Title Value="authenticator"/>
@@ -37,8 +36,17 @@
       <Filename Value="authenticator"/>
     </Target>
     <SearchPaths>
+      <IncludeFiles Value="$(ProjOutDir)"/>
       <UnitOutputDirectory Value="lib/$(TargetCPU)-$(TargetOS)"/>
     </SearchPaths>
+    <Linking>
+      <Debugging>
+        <DebugInfoType Value="dsDwarf3"/>
+      </Debugging>
+    </Linking>
+    <Other>
+      <CompilerPath Value="/usr/lib/fpc/3.3.1/ppcx64"/>
+    </Other>
   </CompilerOptions>
   <Debugging>
     <Exceptions>
