--- a/packages/fcl-passrc/tests/testpassrc.lpi
+++ b/packages/fcl-passrc/tests/testpassrc.lpi
@@ -4,7 +4,9 @@
     <Version Value="12"/>
     <General>
       <Flags>
-        <SaveOnlyProjectUnits Value="True"/>
+        <MainUnitHasCreateFormStatements Value="False"/>
+        <MainUnitHasTitleStatement Value="False"/>
+        <MainUnitHasScaledStatement Value="False"/>
         <SaveJumpHistory Value="False"/>
         <SaveFoldState Value="False"/>
         <CompatibilityMode Value="True"/>
@@ -40,7 +42,7 @@
         <PackageName Value="FCL"/>
       </Item1>
     </RequiredPackages>
-    <Units Count="15">
+    <Units Count="17">
       <Unit0>
         <Filename Value="testpassrc.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -92,15 +94,27 @@
       <Unit12>
         <Filename Value="tcresolver.pas"/>
         <IsPartOfProject Value="True"/>
+        <UnitName Value="TCResolver"/>
       </Unit12>
       <Unit13>
-        <Filename Value="tcgenerics.pas"/>
-        <IsPartOfProject Value="True"/>
-      </Unit13>
-      <Unit14>
         <Filename Value="tcuseanalyzer.pas"/>
         <IsPartOfProject Value="True"/>
+        <UnitName Value="TCUseAnalyzer"/>
+      </Unit13>
+      <Unit14>
+        <Filename Value="tcresolvegenerics.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="TCResolveGenerics"/>
       </Unit14>
+      <Unit15>
+        <Filename Value="tcgenerics.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit15>
+      <Unit16>
+        <Filename Value="tcresolvemultierrors.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="TCResolveMultiErrors"/>
+      </Unit16>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
@@ -126,11 +140,6 @@
       </Checks>
       <VerifyObjMethodCallValidity Value="True"/>
     </CodeGeneration>
-    <Linking>
-      <Debugging>
-        <DebugInfoType Value="dsDwarf3"/>
-      </Debugging>
-    </Linking>
   </CompilerOptions>
   <Debugging>
     <Exceptions Count="3">
