Change m68k-embedded target to handle standard RTL units as most other CPUs do (fixes compilation failure in utils/h2pas package)

--- a/rtl/embedded/Makefile
+++ b/rtl/embedded/Makefile
@@ -491,7 +491,7 @@ ifeq ($(ARCH),x86_64)
 CPU_SPECIFIC_COMMON_UNITS=sysutils math classes fgl macpas typinfo types rtlconsts getopts lineinfo
 endif
 ifeq ($(ARCH),m68k)
-CPU_SPECIFIC_COMMON_UNITS=sysutils math
+CPU_SPECIFIC_COMMON_UNITS=sysutils math classes fgl macpas typinfo types rtlconsts getopts lineinfo
 endif
 ifeq ($(ARCH),mipsel)
 CPU_SPECIFIC_COMMON_UNITS=sysutils math classes fgl macpas typinfo types rtlconsts getopts lineinfo
