--- a/packages/pastojs/tests/testpas2js.lpi
+++ b/packages/pastojs/tests/testpas2js.lpi
@@ -29,6 +29,14 @@
         <Mode0 Name="default"/>
       </Modes>
     </RunParams>
+    <RequiredPackages Count="2">
+      <Item1>
+        <PackageName Value="FPCUnitConsoleRunner"/>
+      </Item1>
+      <Item2>
+        <PackageName Value="FCL"/>
+      </Item2>
+    </RequiredPackages>
     <Units Count="14">
       <Unit0>
         <Filename Value="testpas2js.pp"/>
@@ -120,8 +128,10 @@
       <VerifyObjMethodCallValidity Value="True"/>
     </CodeGeneration>
     <Other>
-      <CustomOptions Value="-dVerbosePas2JS 
--tunicodertl"/>
+      <CustomOptions Value="-dVerbosePas2JS"/>
+      <OtherDefines Count="1">
+        <Define0 Value="VerbosePas2JS"/>
+      </OtherDefines>
     </Other>
   </CompilerOptions>
   <Debugging>
