--- a/utils/json2pas/Makefile.fpc
+++ b/utils/json2pas/Makefile.fpc
@@ -7,7 +7,7 @@ name=json2pas
 version=3.3.1
 
 [require]
-packages=rtl fpmkunit fcl-json
+packages=rtl fpmkunit fcl-json fcl-process libtar paszlib
 
 [install]
 fpcpackage=y
