--- a/utils/pas2js/Makefile.fpc
+++ b/utils/pas2js/Makefile.fpc
@@ -7,7 +7,7 @@ name=pas2js
 version=3.3.1
 
 [require]
-packages=rtl fpmkunit
+packages=rtl fpmkunit fcl-json fcl-process libtar paszlib
 
 [install]
 fpcpackage=y
