--- a/utils/unicode/Makefile.fpc
+++ b/utils/unicode/Makefile.fpc
@@ -7,7 +7,7 @@ name=unicode
 version=3.3.1
 
 [require]
-packages=rtl fpmkunit
+packages=rtl fpmkunit fcl-json fcl-process libtar paszlib
 
 [install]
 fpcpackage=y
