* Fix bootstrap target. Fixes issue #40363

--- a/utils/fpcm/Makefile
+++ b/utils/fpcm/Makefile
@@ -1,2 +1,8 @@
 PACKAGE_NAME=fpcm
 include ../build/Makefile.pkg
+ifndef inCygWin
+$(BS_UNITDIR):
+	$(MKDIRTREE) $(BS_UNITDIR)
+bootstrap: $(BS_UNITDIR) fpcmake.inc
+	$(FPCFPMAKE) fpcmake.pp $(FPMAKE_SKIP_CONFIG) -Fu$(UNITDIR_FPMAKE_RTL) -FU$(BS_UNITDIR) $(OPT)
+endif
