* Small tool to regenerate fpcmake.inc. Execute "make regenerateinc" to use

--- a/utils/fpcm/Makefile
+++ b/utils/fpcm/Makefile
@@ -6,3 +6,19 @@ $(BS_UNITDIR):
 bootstrap: $(BS_UNITDIR) fpcmake.inc
 	$(FPCFPMAKE) fpcmake.pp $(FPMAKE_SKIP_CONFIG) -Fu$(UNITDIR_FPMAKE_RTL) -FU$(BS_UNITDIR) $(OPT)
 endif
+
+regeninc$(EXEEXT): regeninc.pp
+ifdef INSTALLEDCOMPILER
+	$(FPC) $<
+else	
+	$(COMPILER) $<
+endif
+
+regenerateinc: regeninc$(EXEEXT)
+ifdef inUnix
+	./regeninc
+else
+        regeninc$(EXEEXT)
+endif	
+
+	
