* Add dependencies, fix jenkins build

--- a/rtl/linux/Makefile.fpc
+++ b/rtl/linux/Makefile.fpc
@@ -67,7 +67,8 @@ EXEINFO_DEPS_OS=$(DLUNIT)$(PPUEXT) $(CTYPESUNIT)$(PPUEXT) $(BASEUNIXUNIT)$(PPUEX
 SYSUTILS_DEPS_OS=$(LINUXUNIT)$(PPUEXT)
 UNITPREFIX=rtl
 NSOSDIR=$(NSDIR)/linux
-UNIX_DEPS_OS=$(SYSCALLS)$(PPU)
+UNIX_DEPS_OS=$(BASEUNIXUNIT)$(PPUEXT)
+CTYPES_DEPS_OS=$(UNIXTYPEUNIT)$(PPUEXT)
 CPU_UNITS=
 SYSINIT_UNITS=
 
