* Better dependencies for ctypes, remove double unit rules

--- a/rtl/darwin/Makefile
+++ b/rtl/darwin/Makefile
@@ -887,7 +887,10 @@ UNITPREFIX=rtl
 INITCDIR=$(UNIXINC)
 SYSUTILS_DEPS_OS=$(SYSCTLUNIT)$(PPUEXT) $(BASEUNIXUNIT)$(PPUEXT) $(UNIXUNIT)$(PPUEXT) $(ERRORSUNIT)$(PPUEXT) $(SYSCONSTUNIT)$(PPUEXT) $(UNIXTYPEUNIT)$(PPUEXT)
 BASEUNIX_DEPS_OS=$(SYSCTLUNIT)$(PPUEXT)
-DYNLIBS_DEPS_OS=$(DLUNIT)$(PPUEXT);
+DYNLIBS_DEPS_OS=$(DLUNIT)$(PPUEXT)
+CTYPES_DEPS_OS=$(UNIXTYPEUNIT)$(PPUEXT)
+EXEINFO_DEPS_OS=$(BASEUNIXUNIT)$(PPUEXT)
+FPEXTRES_DEPS_OS=$(BASEUNIXUNIT)$(PPUEXT)
 ifeq ($(findstring 1.0.,$(FPC_VERSION)),)
 SYSTEMUNIT=system
 else
@@ -2771,10 +2774,6 @@ SYSINCDEPS=$(addprefix $(INC)/,$(SYSINCNAMES))
 include $(PROCINC)/makefile.cpu
 SYSCPUDEPS=$(addprefix $(PROCINC)/,$(CPUINCNAMES))
 SYSDEPS=$(SYSINCDEPS) $(SYSCPUDEPS) $(OSPROCINC)/sighnd.inc $(OSPROCINC)/sig_cpu.inc
-SYSTEMUNIT_DEPS=$(BSDINC)/$(SYSTEMUNIT).pp $(SYSDEPS)\
-		$(SYSTEMUNIT_DEPS_OS) $(SYSTEMUNIT_DEPS_CPU)
-$(SYSTEMUNIT)$(PPUEXT) : $(SYSTEMUNIT_DEPS)
-	$(COMPILER) $(FPC_SYSTEM_OPT) -Us -Sg $<
 SYSINIT_DEPS=sysinit.pas $(SYSTEMUNIT)$(PPUEXT)\
 	     $(SYSINIT_DEPS_OS) $(SYSINIT_DEPS_CPU)
 sysinit$(PPUEXT) : $(SYSINIT_DEPS)
