--- a/rtl/darwin/Makefile.fpc
+++ b/rtl/darwin/Makefile.fpc
@@ -75,7 +75,10 @@ INITCDIR=$(UNIXINC)
 
 SYSUTILS_DEPS_OS=$(SYSCTLUNIT)$(PPUEXT) $(BASEUNIXUNIT)$(PPUEXT) $(UNIXUNIT)$(PPUEXT) $(ERRORSUNIT)$(PPUEXT) $(SYSCONSTUNIT)$(PPUEXT) $(UNIXTYPEUNIT)$(PPUEXT)
 BASEUNIX_DEPS_OS=$(SYSCTLUNIT)$(PPUEXT)
-DYNLIBS_DEPS_OS=$(DLUNIT)$(PPUEXT);
+DYNLIBS_DEPS_OS=$(DLUNIT)$(PPUEXT)
+CTYPES_DEPS_OS=$(UNIXTYPEUNIT)$(PPUEXT)
+EXEINFO_DEPS_OS=$(BASEUNIXUNIT)$(PPUEXT)
+FPEXTRES_DEPS_OS=$(BASEUNIXUNIT)$(PPUEXT)
 
 ifeq ($(findstring 1.0.,$(FPC_VERSION)),)
 SYSTEMUNIT=system
@@ -128,12 +131,6 @@ SYSDEPS=$(SYSINCDEPS) $(SYSCPUDEPS) $(OSPROCINC)/sighnd.inc $(OSPROCINC)/sig_cpu
 # System Units (System, Objpas, Strings)
 #
 
-
-SYSTEMUNIT_DEPS=$(BSDINC)/$(SYSTEMUNIT).pp $(SYSDEPS)\
-                $(SYSTEMUNIT_DEPS_OS) $(SYSTEMUNIT_DEPS_CPU)
-
-$(SYSTEMUNIT)$(PPUEXT) : $(SYSTEMUNIT_DEPS)
-	$(COMPILER) $(FPC_SYSTEM_OPT) -Us -Sg $<
 
 
 SYSINIT_DEPS=sysinit.pas $(SYSTEMUNIT)$(PPUEXT)\
