* dos unit deps

--- a/rtl/linux/Makefile
+++ b/rtl/linux/Makefile
@@ -879,8 +879,8 @@ EXEINFO_DEPS_OS=$(DLUNIT)$(PPUEXT) $(CTYPESUNIT)$(PPUEXT) $(BASEUNIXUNIT)$(PPUEX
 SYSUTILS_DEPS_OS=$(LINUXUNIT)$(PPUEXT)
 UNITPREFIX=rtl
 NSOSDIR=$(NSDIR)/linux
-UNIX_DEPS_OS=$(BASEUNIXUNIT)$(PPUEXT)
 CTYPES_DEPS_OS=$(UNIXTYPEUNIT)$(PPUEXT)
+DOS_DEPS_OS=$(BASEUNIXUNIT)$(PPUEXT) $(UNIXUTILUNIT)$(PPUEXT) $(UNIXUNIT)$(PPUEXT)
 CPU_UNITS=
 SYSINIT_UNITS=
 LOADERS=prt0 dllprt0 cprt0 gprt0
