--- a/rtl/linux/Makefile
+++ b/rtl/linux/Makefile
@@ -881,6 +881,7 @@ UNITPREFIX=rtl
 NSOSDIR=$(NSDIR)/linux
 CTYPES_DEPS_OS=$(UNIXTYPEUNIT)$(PPUEXT)
 DOS_DEPS_OS=$(BASEUNIXUNIT)$(PPUEXT) $(UNIXUTILUNIT)$(PPUEXT) $(UNIXUNIT)$(PPUEXT)
+DYNLIBS_DEPS_OS=$(DLUNIT)$(PPUEXT)
 CPU_UNITS=
 SYSINIT_UNITS=
 LOADERS=prt0 dllprt0 cprt0 gprt0
