--- a/rtl/os2/Makefile
+++ b/rtl/os2/Makefile
@@ -103,7 +103,7 @@ export ECHO
 endif
 override OS_TARGET_DEFAULT=os2
 override CPU_TARGET_DEFAULT=i386
-override DEFAULT_FPCDIR=../.. ../..
+override DEFAULT_FPCDIR=../..
 ifndef FPC
 ifdef PP
 FPC=$(PP)
@@ -2212,6 +2212,9 @@ endif
 ifndef BASEUNIXDIR
 BASEUNIXDIR=$(UNIXINC)
 endif
+ifndef EXTPAS_DEPS_OS
+EXTPAS_DEPS_OS=$(DOSUNIT)$(PPUEXT)
+endif
 ifdef FPC_DOTTEDUNITS
 BLOCKRTL_OPT:=$(BLOCKRTL_OPT) -dFPC_DOTTEDUNITS
 FPEXTRES_OPT:=$(FPEXTRES_OPT) -dFPC_DOTTEDUNITS
@@ -2245,7 +2248,7 @@ ISO7185_DEPS= $(INC)/$(ISO7185UNIT).pp \
 iso7185$(PPUEXT) : $(ISO7185_DEPS)
 	$(COMPILER) $(ISO7185_OPT) $<
 EXTPAS_DEPS=$(INC)/extpas.pp \
-	    $(DOSUNIT)$(PPUEXT) $(SYSTEMUNIT)$(PPUEXT) \
+	    $(SYSTEMUNIT)$(PPUEXT) \
 	    $(EXTPAS_DEPS_OS) $(EXTPAS_DEPS_CPU)
 extpas$(PPUEXT) : $(EXTPAS_DEPS)
 	$(COMPILER) $(EXTPAS_OPT) $<
@@ -2641,7 +2644,7 @@ SYSCTL_DEPS=$(BSDINC)/sysctl.pp $(SYSTEMUNIT)$(PPUEXT) $(UNIXTYPEUNIT)$(PPUEXT) 
 sysctl$(PPUEXT) : $(SYSCTL_DEPS)
 	$(COMPILER) $(SYSCTL_OPT) $<
 BsdApi.SysCtl$(PPUEXT) : $(NSBSDDIR)/BsdApi.SysCtl.pp $(SYSCTL_DEPS)
-	$(COMPILER) $(BSD_OPT) $<
+	$(COMPILER) $(SYSCTL_OPT) $<
 BSD_DEPS=$(BSDINC)/bsd.pas $(INITCUNIT)$(PPUEXT) $(UNIXUNIT)$(PPUEXT) \
 	 $(BSD_DEPS_OS) $(BSD_DEPS_CPU)
 bsd$(PPUEXT): $(BSD_DEPS)
