--- a/rtl/aros/Makefile
+++ b/rtl/aros/Makefile
@@ -103,7 +103,7 @@ export ECHO
 endif
 override OS_TARGET_DEFAULT=aros
 override CPU_TARGET_DEFAULT=i386
-override DEFAULT_FPCDIR=../.. ../..
+override DEFAULT_FPCDIR=../..
 ifndef FPC
 ifdef PP
 FPC=$(PP)
@@ -2249,6 +2249,9 @@ endif
 ifndef BASEUNIXDIR
 BASEUNIXDIR=$(UNIXINC)
 endif
+ifndef EXTPAS_DEPS_OS
+EXTPAS_DEPS_OS=$(DOSUNIT)$(PPUEXT)
+endif
 ifdef FPC_DOTTEDUNITS
 BLOCKRTL_OPT:=$(BLOCKRTL_OPT) -dFPC_DOTTEDUNITS
 FPEXTRES_OPT:=$(FPEXTRES_OPT) -dFPC_DOTTEDUNITS
@@ -2282,7 +2285,7 @@ ISO7185_DEPS= $(INC)/$(ISO7185UNIT).pp \
 iso7185$(PPUEXT) : $(ISO7185_DEPS)
 	$(COMPILER) $(ISO7185_OPT) $<
 EXTPAS_DEPS=$(INC)/extpas.pp \
-	    $(DOSUNIT)$(PPUEXT) $(SYSTEMUNIT)$(PPUEXT) \
+	    $(SYSTEMUNIT)$(PPUEXT) \
 	    $(EXTPAS_DEPS_OS) $(EXTPAS_DEPS_CPU)
 extpas$(PPUEXT) : $(EXTPAS_DEPS)
 	$(COMPILER) $(EXTPAS_OPT) $<
@@ -2386,7 +2389,7 @@ FPCYLIX_DEPS=fpcylix.pp \
 	     $(FPCYLIX_DEPS_OS)  $(FPCYLIX_DEPS_CPU)
 fpcylix$(PPUEXT) : $(FPCYLIX_DEPS)
 	$(COMPILER) $(FPCYLIX_OPT) $<
-TERMIO_DEPS=$(OSDIR)/termio.pp $(BASEUNIXUNIT)$(PPUEXT) $(SYSTEMUNIT)$(PPUEXT)\
+TERMIO_DEPS=$(OSDIR)/termio.pp $(BASEUNIXUNIT)$(PPUEXT) $(SYSTEMUNIT)$(PPUEXT) \
 	    $(TERMIO_DEPS_OS) $(TERMIO_DEPS_CPU)
 termio$(PPUEXT) : $(TERMIO_DEPS)
 	$(COMPILER) $(TERMIO_OPT) $<
@@ -2588,14 +2591,14 @@ unix$(PPUEXT): $(UNIX_DEPS)
 UnixApi.Unix$(PPUEXT) : $(NSINC)/UnixApi.Unix.pp $(UNIX_DEPS)
 	$(COMPILER) $(UNIX_OPT) $<
 SYSCALL_DEPS=$(UNIXINC)/syscall.pp \
-	     $(SYSTEMUNIT)$(PPUEXT)\
+	     $(SYSTEMUNIT)$(PPUEXT) \
 	     $(SYSCALL_DEPS_OS) $(SYSCALL_DEPS_CPU)
 syscall$(PPUEXT) : $(SYSCALL_DEPS)
 	$(COMPILER) $(SYSCALL_OPT) $<
 UnixApi.SysCall$(PPUEXT) : $(NSINC)/UnixApi.SysCall.pp $(SYSCALL_DEPS) 
 	$(COMPILER) $(SYSCALL_OPT) $<
-UNIXUTIL_DEPS=$(UNIXINC)/unixutil.pp $(INC)/textrec.inc $(INC)/filerec.inc\
-	     $(SYSTEMUNIT)$(PPUEXT)\
+UNIXUTIL_DEPS=$(UNIXINC)/unixutil.pp $(INC)/textrec.inc $(INC)/filerec.inc \
+	     $(SYSTEMUNIT)$(PPUEXT) \
 	     $(UNIXUTIL_DEPS_OS)
 unixutil$(PPUEXT) : $(UNIXUTIL_DEPS)
 	$(COMPILER) $(UNIXUTIL_OPT) $<
@@ -2678,7 +2681,7 @@ SYSCTL_DEPS=$(BSDINC)/sysctl.pp $(SYSTEMUNIT)$(PPUEXT) $(UNIXTYPEUNIT)$(PPUEXT) 
 sysctl$(PPUEXT) : $(SYSCTL_DEPS)
 	$(COMPILER) $(SYSCTL_OPT) $<
 BsdApi.SysCtl$(PPUEXT) : $(NSBSDDIR)/BsdApi.SysCtl.pp $(SYSCTL_DEPS)
-	$(COMPILER) $(BSD_OPT) $<
+	$(COMPILER) $(SYSCTL_OPT) $<
 BSD_DEPS=$(BSDINC)/bsd.pas $(INITCUNIT)$(PPUEXT) $(UNIXUNIT)$(PPUEXT) \
 	 $(BSD_DEPS_OS) $(BSD_DEPS_CPU)
 bsd$(PPUEXT): $(BSD_DEPS)
