--- a/rtl/win64/Makefile
+++ b/rtl/win64/Makefile
@@ -102,7 +102,7 @@ endif
 export ECHO
 endif
 override OS_TARGET_DEFAULT=win64
-override DEFAULT_FPCDIR=../.. ../..
+override DEFAULT_FPCDIR=../..
 ifndef FPC
 ifdef PP
 FPC=$(PP)
@@ -879,7 +879,6 @@ OSDIR=win64
 NSOSDIR=$(NSDIR)/windows
 SYSUTILSDIR=$(WINDIR)
 SYSUTILS_OPT=-Fi../win
-SYSUTILS_DEPS_OS=$(WINDOWSUNIT)$(PPUEXT) $(WINDIRSUNIT)$(PPUEXT)
 UNITPREFIX=rtl
 SYSTEMUNIT=system
 ifneq ($(findstring 2.0.,$(FPC_VERSION)),)
@@ -890,6 +889,7 @@ CPU_UNITS=cpu signals
 endif
 OBJPASDIR=$(RTL)/objpas
 WINDOWS_SOURCE_FILES=$(addprefix $(WININC)/,$(addsuffix .inc,$(WINDOWS_FILES)))
+FPC_SYSTEM_OPT=-Fi../win
 ifeq ($(CPU_OS_TARGET),x86_64-win64)
 override TARGET_UNITS+=system uuchar objpas macpas $(ISO7185UNIT) buildrtl $(CPALLUNIT) $(LINEINFOUNIT) $(LNFODWRFUNIT)
 endif
@@ -897,10 +897,10 @@ ifeq ($(CPU_OS_TARGET),aarch64-win64)
 override TARGET_UNITS+=system uuchar objpas macpas $(ISO7185UNIT) buildrtl $(CPALLUNIT) $(LINEINFOUNIT) $(LNFODWRFUNIT)
 endif
 ifeq ($(CPU_OS_TARGET),x86_64-win64)
-override TARGET_IMPLICITUNITS+=sysinit $(CTYPESUNIT) $(STRINGSUNIT) extpas heaptrc $(DOSUNIT) $(MESSAGESUNIT) $(WINDOWSUNIT) $(CMEMUNIT) $(DYNLIBSUNIT) $(RTLCONSTSUNIT) $(SYSCONSTUNIT) $(SYSUTILSUNIT) $(MATHUNIT) $(TYPESUNIT) $(TYPINFOUNIT) $(SORTBASEUNIT) $(FGLUNIT) $(CLASSESUNIT) $(GETOPTSUNIT) $(CHARSETUNIT) $(CHARACTERUNIT) $(FPWIDESTRINGUNIT) $(SHAREMEMUNIT) $(EXEINFOUNIT) fpintres $(WINDIRSUNIT) $(SOFTFPUUNIT) $(SFPUX80UNIT) $(UFLOATX80UNIT) $(SFPU128UNIT) $(UFLOAT128UNIT) $(CP1250UNIT) $(CP1251UNIT) $(CP1252UNIT) $(CP1253UNIT) $(CP1254UNIT) $(CP1255UNIT) $(CP1256UNIT) $(CP1257UNIT) $(CP1258UNIT) $(CP437UNIT) $(CP646UNIT) $(CP737UNIT) $(CP775UNIT) $(CP850UNIT) $(CP852UNIT) $(CP855UNIT) $(CP856UNIT) $(CP857UNIT) $(CP860UNIT) $(CP861UNIT) $(CP862UNIT) $(CP863UNIT) $(CP864UNIT) $(CP865UNIT) $(CP866UNIT) $(CP869UNIT) $(CP874UNIT) $(CP3021UNIT) $(CP8859_1UNIT) $(CP8859_2UNIT) $(CP8859_3UNIT) $(CP8859_4UNIT) $(CP8859_5UNIT) $(CP8859_6UNIT) $(CP8859_7UNIT) $(CP8859_8UNIT) $(CP8859_9UNIT) $(CP8859_10UNIT) $(CP8859_11UNIT) $(CP8859_13UNIT) $(CP8859_14UNIT) $(CP8859_15UNIT) $(CP8859_16UNIT) $(CPKOI8_RUNIT) $(CPKOI8_UUNIT) $(UNICODEDATAUNIT) $(CPU_UNITS)
+override TARGET_IMPLICITUNITS+=sysinit extpas heaptrc fpintres $(CTYPESUNIT) $(STRINGSUNIT) $(DOSUNIT) $(MESSAGESUNIT) $(WINDOWSUNIT) $(CMEMUNIT) $(DYNLIBSUNIT) $(RTLCONSTSUNIT) $(SYSCONSTUNIT) $(SYSUTILSUNIT) $(MATHUNIT) $(TYPESUNIT) $(TYPINFOUNIT) $(SORTBASEUNIT) $(FGLUNIT) $(CLASSESUNIT) $(GETOPTSUNIT) $(CHARSETUNIT) $(CHARACTERUNIT) $(FPWIDESTRINGUNIT) $(SHAREMEMUNIT) $(EXEINFOUNIT) $(WINDIRSUNIT) $(SOFTFPUUNIT) $(SFPUX80UNIT) $(UFLOATX80UNIT) $(SFPU128UNIT) $(UFLOAT128UNIT) $(CP1250UNIT) $(CP1251UNIT) $(CP1252UNIT) $(CP1253UNIT) $(CP1254UNIT) $(CP1255UNIT) $(CP1256UNIT) $(CP1257UNIT) $(CP1258UNIT) $(CP437UNIT) $(CP646UNIT) $(CP737UNIT) $(CP775UNIT) $(CP850UNIT) $(CP852UNIT) $(CP855UNIT) $(CP856UNIT) $(CP857UNIT) $(CP860UNIT) $(CP861UNIT) $(CP862UNIT) $(CP863UNIT) $(CP864UNIT) $(CP865UNIT) $(CP866UNIT) $(CP869UNIT) $(CP874UNIT) $(CP3021UNIT) $(CP8859_1UNIT) $(CP8859_2UNIT) $(CP8859_3UNIT) $(CP8859_4UNIT) $(CP8859_5UNIT) $(CP8859_6UNIT) $(CP8859_7UNIT) $(CP8859_8UNIT) $(CP8859_9UNIT) $(CP8859_10UNIT) $(CP8859_11UNIT) $(CP8859_13UNIT) $(CP8859_14UNIT) $(CP8859_15UNIT) $(CP8859_16UNIT) $(CPKOI8_RUNIT) $(CPKOI8_UUNIT) $(UNICODEDATAUNIT) $(CPU_UNITS)
 endif
 ifeq ($(CPU_OS_TARGET),aarch64-win64)
-override TARGET_IMPLICITUNITS+=sysinit $(CTYPESUNIT) $(STRINGSUNIT) extpas heaptrc $(DOSUNIT) $(MESSAGESUNIT) $(WINDOWSUNIT) $(CMEMUNIT) $(DYNLIBSUNIT) $(RTLCONSTSUNIT) $(SYSCONSTUNIT) $(SYSUTILSUNIT) $(MATHUNIT) $(TYPESUNIT) $(TYPINFOUNIT) $(SORTBASEUNIT) $(FGLUNIT) $(CLASSESUNIT) $(GETOPTSUNIT) $(CHARSETUNIT) $(CHARACTERUNIT) $(FPWIDESTRINGUNIT) $(SHAREMEMUNIT) $(EXEINFOUNIT) fpintres $(WINDIRSUNIT) $(SOFTFPUUNIT) $(SFPUX80UNIT) $(UFLOATX80UNIT) $(SFPU128UNIT) $(UFLOAT128UNIT) $(CP1250UNIT) $(CP1251UNIT) $(CP1252UNIT) $(CP1253UNIT) $(CP1254UNIT) $(CP1255UNIT) $(CP1256UNIT) $(CP1257UNIT) $(CP1258UNIT) $(CP437UNIT) $(CP646UNIT) $(CP737UNIT) $(CP775UNIT) $(CP850UNIT) $(CP852UNIT) $(CP855UNIT) $(CP856UNIT) $(CP857UNIT) $(CP860UNIT) $(CP861UNIT) $(CP862UNIT) $(CP863UNIT) $(CP864UNIT) $(CP865UNIT) $(CP866UNIT) $(CP869UNIT) $(CP874UNIT) $(CP3021UNIT) $(CP8859_1UNIT) $(CP8859_2UNIT) $(CP8859_3UNIT) $(CP8859_4UNIT) $(CP8859_5UNIT) $(CP8859_6UNIT) $(CP8859_7UNIT) $(CP8859_8UNIT) $(CP8859_9UNIT) $(CP8859_10UNIT) $(CP8859_11UNIT) $(CP8859_13UNIT) $(CP8859_14UNIT) $(CP8859_15UNIT) $(CP8859_16UNIT) $(CPKOI8_RUNIT) $(CPKOI8_UUNIT) $(UNICODEDATAUNIT) $(CPU_UNITS)
+override TARGET_IMPLICITUNITS+=sysinit extpas heaptrc fpintres $(CTYPESUNIT) $(STRINGSUNIT) $(DOSUNIT) $(MESSAGESUNIT) $(WINDOWSUNIT) $(CMEMUNIT) $(DYNLIBSUNIT) $(RTLCONSTSUNIT) $(SYSCONSTUNIT) $(SYSUTILSUNIT) $(MATHUNIT) $(TYPESUNIT) $(TYPINFOUNIT) $(SORTBASEUNIT) $(FGLUNIT) $(CLASSESUNIT) $(GETOPTSUNIT) $(CHARSETUNIT) $(CHARACTERUNIT) $(FPWIDESTRINGUNIT) $(SHAREMEMUNIT) $(EXEINFOUNIT) $(WINDIRSUNIT) $(SOFTFPUUNIT) $(SFPUX80UNIT) $(UFLOATX80UNIT) $(SFPU128UNIT) $(UFLOAT128UNIT) $(CP1250UNIT) $(CP1251UNIT) $(CP1252UNIT) $(CP1253UNIT) $(CP1254UNIT) $(CP1255UNIT) $(CP1256UNIT) $(CP1257UNIT) $(CP1258UNIT) $(CP437UNIT) $(CP646UNIT) $(CP737UNIT) $(CP775UNIT) $(CP850UNIT) $(CP852UNIT) $(CP855UNIT) $(CP856UNIT) $(CP857UNIT) $(CP860UNIT) $(CP861UNIT) $(CP862UNIT) $(CP863UNIT) $(CP864UNIT) $(CP865UNIT) $(CP866UNIT) $(CP869UNIT) $(CP874UNIT) $(CP3021UNIT) $(CP8859_1UNIT) $(CP8859_2UNIT) $(CP8859_3UNIT) $(CP8859_4UNIT) $(CP8859_5UNIT) $(CP8859_6UNIT) $(CP8859_7UNIT) $(CP8859_8UNIT) $(CP8859_9UNIT) $(CP8859_10UNIT) $(CP8859_11UNIT) $(CP8859_13UNIT) $(CP8859_14UNIT) $(CP8859_15UNIT) $(CP8859_16UNIT) $(CPKOI8_RUNIT) $(CPKOI8_UUNIT) $(UNICODEDATAUNIT) $(CPU_UNITS)
 endif
 ifeq ($(CPU_OS_TARGET),x86_64-win64)
 override TARGET_LOADERS+=$(LOADERS)
@@ -2232,6 +2232,9 @@ endif
 ifndef BASEUNIXDIR
 BASEUNIXDIR=$(UNIXINC)
 endif
+ifndef EXTPAS_DEPS_OS
+EXTPAS_DEPS_OS=$(DOSUNIT)$(PPUEXT)
+endif
 ifdef FPC_DOTTEDUNITS
 BLOCKRTL_OPT:=$(BLOCKRTL_OPT) -dFPC_DOTTEDUNITS
 FPEXTRES_OPT:=$(FPEXTRES_OPT) -dFPC_DOTTEDUNITS
@@ -2265,7 +2268,7 @@ ISO7185_DEPS= $(INC)/$(ISO7185UNIT).pp \
 iso7185$(PPUEXT) : $(ISO7185_DEPS)
 	$(COMPILER) $(ISO7185_OPT) $<
 EXTPAS_DEPS=$(INC)/extpas.pp \
-	    $(DOSUNIT)$(PPUEXT) $(SYSTEMUNIT)$(PPUEXT) \
+	    $(SYSTEMUNIT)$(PPUEXT) \
 	    $(EXTPAS_DEPS_OS) $(EXTPAS_DEPS_CPU)
 extpas$(PPUEXT) : $(EXTPAS_DEPS)
 	$(COMPILER) $(EXTPAS_OPT) $<
@@ -2661,7 +2664,7 @@ SYSCTL_DEPS=$(BSDINC)/sysctl.pp $(SYSTEMUNIT)$(PPUEXT) $(UNIXTYPEUNIT)$(PPUEXT) 
 sysctl$(PPUEXT) : $(SYSCTL_DEPS)
 	$(COMPILER) $(SYSCTL_OPT) $<
 BsdApi.SysCtl$(PPUEXT) : $(NSBSDDIR)/BsdApi.SysCtl.pp $(SYSCTL_DEPS)
-	$(COMPILER) $(BSD_OPT) $<
+	$(COMPILER) $(SYSCTL_OPT) $<
 BSD_DEPS=$(BSDINC)/bsd.pas $(INITCUNIT)$(PPUEXT) $(UNIXUNIT)$(PPUEXT) \
 	 $(BSD_DEPS_OS) $(BSD_DEPS_CPU)
 bsd$(PPUEXT): $(BSD_DEPS)
@@ -2680,10 +2683,6 @@ BUILDUNITPATHS=-Fu$(WININC) -Fu$(WINDIR) -Fu$(INC) -Fu$(OBJPASDIR) -Fu../$(ARCH)
 ifdef FPC_DOTTEDUNITS
 BUILDRTL_OPT:=$(BUILDRTL_OPT) -Fu$(NSINC) -Fu$(NSOSDIR) -dFPC_DOTTEDUNITS 
 endif
-SYSTEM_DEPS=system.pp $(SYSDEPS) \
-	    $(SYSTEM_DEPS_OS) $(SYSTEM_DEPS_CPU)
-system$(PPUEXT) : $(SYSTEM_DEPS)
-	$(COMPILER) $(FPC_SYSTEM_OPT) -Us -Sg $< -Fi../win
 BUILDRTL_DEPS=buildrtl.pp system$(PPUEXT) objpas$(PPUEXT) \
 	      $(BUILDRTL_DEPS_OS) $(BUILDRTL_DEPS_CPU)
 buildrtl$(PPUEXT) : $(BUILDRTL_DEPS)
