* Extra dependencies for dos, solves hopefully jenkins problem ?

--- a/rtl/linux/Makefile.fpc
+++ b/rtl/linux/Makefile.fpc
@@ -67,8 +67,9 @@ SYSUTILS_DEPS_OS=$(LINUXUNIT)$(PPUEXT)
 UNITPREFIX=rtl
 NSOSDIR=$(NSDIR)/linux
 CTYPES_DEPS_OS=$(UNIXTYPEUNIT)$(PPUEXT)
-DOS_DEPS_OS=$(BASEUNIXUNIT)$(PPUEXT) $(UNIXUTILUNIT)$(PPUEXT) $(UNIXUNIT)$(PPUEXT)
+DOS_DEPS_OS=$(BASEUNIXUNIT)$(PPUEXT) $(UNIXUTILUNIT)$(PPUEXT) $(UNIXUNIT)$(PPUEXT) $(SYSCALLSUNIT)$(PPUEXT) $(INITCUNIT)$(PPUEXT)
 DYNLIBS_DEPS_OS=$(DLUNIT)$(PPUEXT)
+CTHREADS_DEPS_OS=$(LINUXUNIT)$(PPUEXT)
 
 CPU_UNITS=
 SYSINIT_UNITS=
@@ -360,4 +361,3 @@ SI_G_DEPS=si_g.pp si_intf.inc $(SYSNRINC) $(ARCH)/si_g.inc $(SYSTEMUNIT)$(PPUEXT
 
 si_g$(PPUEXT) : $(SI_G_DEPS)
 	$(COMPILER) $<
-
