--- a/rtl/linux/Makefile
+++ b/rtl/linux/Makefile
@@ -880,8 +880,9 @@ SYSUTILS_DEPS_OS=$(LINUXUNIT)$(PPUEXT)
 UNITPREFIX=rtl
 NSOSDIR=$(NSDIR)/linux
 CTYPES_DEPS_OS=$(UNIXTYPEUNIT)$(PPUEXT)
-DOS_DEPS_OS=$(BASEUNIXUNIT)$(PPUEXT) $(UNIXUTILUNIT)$(PPUEXT) $(UNIXUNIT)$(PPUEXT)
+DOS_DEPS_OS=$(BASEUNIXUNIT)$(PPUEXT) $(UNIXUTILUNIT)$(PPUEXT) $(UNIXUNIT)$(PPUEXT) $(SYSCALLSUNIT)$(PPUEXT) $(INITCUNIT)$(PPUEXT)
 DYNLIBS_DEPS_OS=$(DLUNIT)$(PPUEXT)
+CTHREADS_DEPS_OS=$(LINUXUNIT)$(PPUEXT)
 CPU_UNITS=
 SYSINIT_UNITS=
 LOADERS=prt0 dllprt0 cprt0 gprt0
